--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 ul,li,h3,h1,pre{ margin:0; padding:0; list-style:none; font-weight:normal;}
-body{ font-size:12px; color:#333;}
+body{ font-size:14px; color:#333; margin:0; padding:0}
 a{ text-decoration:none; color:#6191D4;}
 a:hover{ text-decoration:underline; color:#f00}
 .current{  color:#f00}
@@ -20,8 +20,8 @@ a:hover{ text-decoration:underline; color:#f00}
 
 .mod-content .nav{ height:25px; line-height:25px; text-align:center; margin:0 auto;  *float:left}
 .mod-content .nav a{ color:#333; text-decoration:underline;}
-.mod-list{ }
-.mod-list li{ overflow:hidden}
+.mod-list{ font-size:14px; line-height:30px;}
+.mod-list li{ overflow:hidden; height:30px;}
 .mod-list .dt{ float:right;}
 .mod-list .tit{ float:left}
 
@@ -57,3 +57,5 @@ iframe{ vertical-align:top;}
 
 .mod-header .baner img {
 }
+
+.nav-header{ border-bottom:1px solid #ededed; height:50px; margin-bottom:15px; }
